# gpt-2

./: model.py  pyproject.toml
src/lib/gpt2/: inference.py  model.py  train.py
